# trade-aggregator

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
docs/: roadmap.md
docs/architecture/: README.md  canonical.md  extension.md  symbol-aggregator.md
docs/architecture/aggressor/: README.md
docs/architecture/aggressor/orderflow/: README.md  delta-cvd.md  footprint.md  tpo.md  volume-profile.md
docs/architecture/passive/: README.md  liquidity-profile.md  orderbook.md
docs/architecture/transverse/: README.md
docs/domain/: concepts.md  glossaire.md
docs/ideation/: idea.md
docs/tranches/T0-walking-skeleton/: tests.md  use-cases.md
docs/tranches/T1-coeur-agressif/: tests.md  use-cases.md
docs/tranches/T2-passif/: tests.md  use-cases.md
docs/tranches/T3-differenciation/: tests.md  use-cases.md
docs/tranches/T4-robustesse-perf/: tests.md  use-cases.md
docs/tranches/T5-iteration-consommateur/: tests.md  use-cases.md
docs/tranches/T6-primitif-screenshot/: tests.md  use-cases.md
docs/vision/: README.md  features.md  piliers.md  positionnement.md  produit.md  risques-questions.md  scope.md  strategie.md
src/: aggregator.rs  bar.rs  canonical.rs  databento.rs  error.rs  extension.rs  lib.rs  orderflow.rs  passive.rs  period.rs
tests/: bench.rs  databento_replay.rs  extension_t1.rs  merged_t5.rs  order_flow_wiring.rs  passive_t2.rs  screenshot_t6.rs  walking_skeleton.rs
